--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
           command: meteor npm i
       - run:
           name: start app and run e2e tests
-          command: meteor npm run test:e2e
+          command: meteor npm run CI:e2e
           no_output_timeout: 5m
       - run:
           name: copy meteor bin to build cache
