Remove unneeded packages.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "start:e2e":
-      "MONGO_URL=mongodb://localhost:27017/meteor-test-e2e meteor --port 3050",
+    "start:e2e": "MONGO_URL=mongodb://localhost:27017/meteor-test-e2e meteor --port 3050",
     "test:e2e": "cypress run",
     "CI:e2e": "start-server-and-test start:e2e http://localhost:3050 test:e2e"
   },
@@ -14,8 +13,6 @@
   },
   "devDependencies": {
     "cypress": "^2.1.0",
-    "start-server-and-test": "^1.1.4",
-    "ttab": "^0.6.1",
-    "wait-on": "^2.1.0"
+    "start-server-and-test": "^1.1.4"
   }
 }
