--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,8 +57,8 @@ jobs:
           name: install npm packages
           command: meteor npm i
       - run:
-          name: start app and run e2e tests
-          command: meteor npm run CI:e2e
+          name: start app and run E2E tests
+          command: meteor npm run test:e2e:CI
           no_output_timeout: 5m
       - run:
           name: copy meteor bin to build cache
