--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,3 +82,5 @@ jobs:
           paths:
             - ./node_modules/
             - ~/.npm/
+      - store_artifacts:
+          path: cypress/screenshots
