Just testing if cypress writes the screenshots in a non-specific store_artifact.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,4 +83,4 @@ jobs:
             - ./node_modules/
             - ~/.npm/
       - store_artifacts:
-          path: cypress/screenshots
+          path: ./artf
