--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,14 @@
 version: 2
+
 jobs:
   build:
-    working_directory: ~/app
     docker:
       # the Docker image with Cypress dependencies
       - image: cypress/base:6
         environment:
           ## this enables colors in the output
           TERM: xterm
+    working_directory: ~/app
     steps:
       - checkout
       - restore_cache:
@@ -18,6 +19,9 @@ jobs:
           key: meteor-packages-{{ checksum ".meteor/versions" }}-{{ checksum ".circleci/config.yml" }}
       - restore_cache:
           key: npm-packages-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
+      - run:
+          name: check Cypress
+          command: which cypress
       - run:
           name: install build essentials
           command: sudo apt-get install -y build-essential
