--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,3 +20,4 @@ jobs:
           key: v1-npm-deps-{{ checksum "package.json" }}
           paths:
             - node_modules
+      - run: cypress
