--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "start:e2e": "meteor --port 3050",
     "cypress:run": "cypress run --browser chrome",
     "cypress:open": "cypress open",
-    "test:e2e":
-      "start-server-and-test start:e2e http://localhost:3050 cypress:open",
-    "test:e2e:CI":
-      "start-server-and-test start:e2e http://localhost:3050 cypress:run"
+    "test:e2e": "start-server-and-test start:e2e http://localhost:3050 cypress:open",
+    "test:e2e:CI": "start-server-and-test start:e2e http://localhost:3050 cypress:run"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
