--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
+    "hoek": "^4.2.1",
     "meteor-node-stubs": "^0.3.2"
   },
   "devDependencies": {
